# twig-research

./: .env.example  .gitignore  README.md  directpdf.py  docker-compose-debug.yml  docker-compose.yml  pdfmine.py  pyproject.toml  server.py
.github/workflows/: docker-image.yml
api_server/: Dockerfile  app.py  skeleton.py  textrank.py
kubernetes/: autofill-service.yaml  traefik-ingress-routes.yaml
pdf_research/: Classifiers.ipynb  Task.md  directpdf.py  extract_textblock.py  gen_csv.py  labeller.py  pdfmine.py  prototype2.py
pdf_research/Classifiers/: Classifiers.ipynb  README.md  data.csv
twig_scraper/: scrapy.cfg
twig_scraper/misc/: cypherCommands.md  mergeNodes.py
twig_scraper/twig_scraper/: items.py  middlewares.py  pipelines.py  settings.py
twig_scraper/twig_scraper/spiders/: wiki.py
